MFC 267291: Use strcasecmp() instead of strcmp() when checking user-supplied encoding names so that encoding names are treated as case-insensitive.  This allows the use of 'utf-8' instead of 'UTF-8' for example and matches the behavior of iconv(1).

PR:		167977

Former-commit-id: af70da334b7a3cabcc87132c935af87cbc14a09b