sys/libkern/iconv.c
@@ -642,7 +642,7 @@ argument_list|)
 block|{
 if|if
 condition|(
-name|strcmp
+name|strcasecmp
 argument_list|(
 name|csp
 operator|->
@@ -653,7 +653,7 @@ argument_list|)
 operator|==
 literal|0
 operator|&&
-name|strcmp
+name|strcasecmp
 argument_list|(
 name|csp
 operator|->
